cmake_minimum_required(VERSION 3.24)
project(Poo_Project_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Poo_Project_2 main.cpp flower.h flower.cpp Rose_flower.cpp Rose_flower.h flower_count_exception.h flower_count_exception.cpp Tulip_flower.h Tulip_flower.cpp Bouquet.h Bouquet.cpp Shopping_cart.h Shopping_cart.cpp client_info.h client_info.cpp Client.h Client.cpp custom_set.h custom_set.cpp)
